--- a/digital_events_repository/nbproject/project.properties
+++ b/digital_events_repository/nbproject/project.properties
@@ -29,6 +29,28 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-beanutils-1.9.0.jar=web\\resources\\lib\\commons-beanutils-1.9.0.jar
+file.reference.commons-codec-1.5.jar=web\\resources\\lib\\commons-codec-1.5.jar
+file.reference.commons-collections-3.2.1.jar=web\\resources\\lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=web\\resources\\lib\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=web\\resources\\lib\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=web\\resources\\lib\\commons-logging-1.1.1.jar
+file.reference.groovy-all-2.0.1.jar=web\\resources\\lib\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=web\\resources\\lib\\iText-2.1.7.js2.jar
+file.reference.itext-pdfa-5.5.0.jar=web\\resources\\lib\\itext-pdfa-5.5.0.jar
+file.reference.itextpdf-5.5.0.jar=web\\resources\\lib\\itextpdf-5.5.0.jar
+file.reference.jasperreports-6.0.4.jar=web\\resources\\lib\\jasperreports-6.0.4.jar
+file.reference.jasperreports-fonts-6.0.4.jar=web\\resources\\lib\\jasperreports-fonts-6.0.4.jar
+file.reference.jasperreports-javaflow-6.0.4.jar=web\\resources\\lib\\jasperreports-javaflow-6.0.4.jar
+file.reference.javax.mail.jar=web\\resources\\lib\\javax.mail.jar
+file.reference.jcommon-1.0.15.jar=web\\resources\\lib\\jcommon-1.0.15.jar
+file.reference.jfreechart-1.0.12.jar=web\\resources\\lib\\jfreechart-1.0.12.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=web\\resources\\lib\\mysql-connector-java-5.1.23-bin.jar
+file.reference.olap4j-0.9.7.309-JS-3.jar=web\\resources\\lib\\olap4j-0.9.7.309-JS-3.jar
+file.reference.png-encoder-1.5.jar=web\\resources\\lib\\png-encoder-1.5.jar
+file.reference.poi-3.10.1.jar=web\\resources\\lib\\poi-3.10.1.jar
+file.reference.primefaces-6.2-sources.jar=web\\resources\\lib\\primefaces-6.2-sources.jar
+file.reference.primefaces-6.2.jar=web\\resources\\lib\\primefaces-6.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +65,30 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.edu_digitalevents_modelo.dist}
+    ${reference.edu_digitalevents_modelo.dist}:\
+    ${libs.primefaces_6.2.classpath}:\
+    ${file.reference.commons-beanutils-1.9.0.jar}:\
+    ${file.reference.commons-codec-1.5.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.itext-pdfa-5.5.0.jar}:\
+    ${file.reference.itextpdf-5.5.0.jar}:\
+    ${file.reference.jasperreports-6.0.4.jar}:\
+    ${file.reference.jasperreports-fonts-6.0.4.jar}:\
+    ${file.reference.jasperreports-javaflow-6.0.4.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.olap4j-0.9.7.309-JS-3.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.10.1.jar}:\
+    ${file.reference.primefaces-6.2-sources.jar}:\
+    ${file.reference.primefaces-6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
