1. MODIFICACION EN DASHBOARD (CARDS) 2. BARRA ACTIVE 3. MODULO INVENTARIO (REGISTRO E IMAGEN) 4. MODULO USUARIOS (TABLAS Y REGISTRO) SENA 21 FEBRERO

--- a/digital_events_repository/nbproject/project.properties
+++ b/digital_events_repository/nbproject/project.properties
@@ -33,6 +33,8 @@ file.reference.commons-beanutils-1.9.0.jar=web\\resources\\lib\\commons-beanutil
 file.reference.commons-codec-1.5.jar=web\\resources\\lib\\commons-codec-1.5.jar
 file.reference.commons-collections-3.2.1.jar=web\\resources\\lib\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=web\\resources\\lib\\commons-digester-2.1.jar
+file.reference.commons-fileupload-1.2.2.jar=web\\resources\\lib\\commons-fileupload-1.2.2.jar
+file.reference.commons-io-2.0.1.jar=web\\resources\\lib\\commons-io-2.0.1.jar
 file.reference.commons-javaflow-20060411.jar=web\\resources\\lib\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=web\\resources\\lib\\commons-logging-1.1.1.jar
 file.reference.groovy-all-2.0.1.jar=web\\resources\\lib\\groovy-all-2.0.1.jar
@@ -49,7 +51,6 @@ file.reference.mysql-connector-java-5.1.23-bin.jar=web\\resources\\lib\\mysql-co
 file.reference.olap4j-0.9.7.309-JS-3.jar=web\\resources\\lib\\olap4j-0.9.7.309-JS-3.jar
 file.reference.png-encoder-1.5.jar=web\\resources\\lib\\png-encoder-1.5.jar
 file.reference.poi-3.10.1.jar=web\\resources\\lib\\poi-3.10.1.jar
-file.reference.primefaces-6.2-sources.jar=web\\resources\\lib\\primefaces-6.2-sources.jar
 file.reference.primefaces-6.2.jar=web\\resources\\lib\\primefaces-6.2.jar
 includes=**
 j2ee.compile.on.save=true
@@ -66,7 +67,6 @@ j2ee.server.type=pfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.edu_digitalevents_modelo.dist}:\
-    ${libs.primefaces_6.2.classpath}:\
     ${file.reference.commons-beanutils-1.9.0.jar}:\
     ${file.reference.commons-codec-1.5.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
@@ -87,8 +87,9 @@ javac.classpath=\
     ${file.reference.olap4j-0.9.7.309-JS-3.jar}:\
     ${file.reference.png-encoder-1.5.jar}:\
     ${file.reference.poi-3.10.1.jar}:\
-    ${file.reference.primefaces-6.2-sources.jar}:\
-    ${file.reference.primefaces-6.2.jar}
+    ${file.reference.primefaces-6.2.jar}:\
+    ${file.reference.commons-fileupload-1.2.2.jar}:\
+    ${file.reference.commons-io-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
