--- a/digital_events_repository/nbproject/project.properties
+++ b/digital_events_repository/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.commons-fileupload-1.2.2.jar=web\\resources\\lib\\commons-fileupl
 file.reference.commons-io-2.0.1.jar=web\\resources\\lib\\commons-io-2.0.1.jar
 file.reference.commons-javaflow-20060411.jar=web\\resources\\lib\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=web\\resources\\lib\\commons-logging-1.1.1.jar
+file.reference.edu.digitalevents.modelo.jar=ModeloLibrerias\\edu.digitalevents.modelo.jar
 file.reference.groovy-all-2.0.1.jar=web\\resources\\lib\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js2.jar=web\\resources\\lib\\iText-2.1.7.js2.jar
 file.reference.itext-pdfa-5.5.0.jar=web\\resources\\lib\\itext-pdfa-5.5.0.jar
@@ -66,7 +67,6 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.edu_digitalevents_modelo.dist}:\
     ${file.reference.commons-beanutils-1.9.0.jar}:\
     ${file.reference.commons-codec-1.5.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
@@ -89,7 +89,8 @@ javac.classpath=\
     ${file.reference.poi-3.10.1.jar}:\
     ${file.reference.primefaces-6.2.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
-    ${file.reference.commons-io-2.0.1.jar}
+    ${file.reference.commons-io-2.0.1.jar}:\
+    ${file.reference.edu.digitalevents.modelo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -118,8 +119,6 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.edu_digitalevents_modelo=../../edu.digital_events.modelo
-reference.edu_digitalevents_modelo.dist=${project.edu_digitalevents_modelo}/dist/edu.digitalevents.modelo.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
