--- a/digital_events_repository/nbproject/project.properties
+++ b/digital_events_repository/nbproject/project.properties
@@ -37,7 +37,6 @@ file.reference.commons-fileupload-1.2.2.jar=web\\resources\\lib\\commons-fileupl
 file.reference.commons-io-2.0.1.jar=web\\resources\\lib\\commons-io-2.0.1.jar
 file.reference.commons-javaflow-20060411.jar=web\\resources\\lib\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=web\\resources\\lib\\commons-logging-1.1.1.jar
-file.reference.edu.digitalevents.modelo.jar=ModeloLibrerias\\edu.digitalevents.modelo.jar
 file.reference.groovy-all-2.0.1.jar=web\\resources\\lib\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js2.jar=web\\resources\\lib\\iText-2.1.7.js2.jar
 file.reference.itext-pdfa-5.5.0.jar=web\\resources\\lib\\itext-pdfa-5.5.0.jar
@@ -90,7 +89,7 @@ javac.classpath=\
     ${file.reference.primefaces-6.2.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
     ${file.reference.commons-io-2.0.1.jar}:\
-    ${file.reference.edu.digitalevents.modelo.jar}
+    ${reference.edu_digitalevents_modelo.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -119,6 +118,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.edu_digitalevents_modelo=../../edu.digital_events.modelo
+reference.edu_digitalevents_modelo.dist=${project.edu_digitalevents_modelo}/dist/edu.digitalevents.modelo.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
