Agregue la libreria Gson Cree una clase nueva en el modelo llamada GrafricoGlobal ya estan full los grafricos de usuarios,inventario, y eventos

--- a/digital_events_repository/nbproject/project.properties
+++ b/digital_events_repository/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.commons-io-2.0.1.jar=web\\resources\\lib\\commons-io-2.0.1.jar
 file.reference.commons-javaflow-20060411.jar=web\\resources\\lib\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=web\\resources\\lib\\commons-logging-1.1.1.jar
 file.reference.groovy-all-2.0.1.jar=web\\resources\\lib\\groovy-all-2.0.1.jar
+file.reference.gson-2.8.5.jar=ModeloLibrerias\\gson-2.8.5.jar
 file.reference.iText-2.1.7.js2.jar=web\\resources\\lib\\iText-2.1.7.js2.jar
 file.reference.itext-pdfa-5.5.0.jar=web\\resources\\lib\\itext-pdfa-5.5.0.jar
 file.reference.itextpdf-5.5.0.jar=web\\resources\\lib\\itextpdf-5.5.0.jar
@@ -89,7 +90,8 @@ javac.classpath=\
     ${file.reference.primefaces-6.2.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
     ${file.reference.commons-io-2.0.1.jar}:\
-    ${reference.edu_digitalevents_modelo.dist}
+    ${reference.edu_digitalevents_modelo.dist}:\
+    ${file.reference.gson-2.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
