Cree un correo digitaleventssystem@gmail.com Contraseña:gaesevents

--- a/digital_events_repository/src/java/digitalevents/languaje/principal/header.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/principal/header.properties
@@ -1,7 +1,8 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_dashboard]=Dashboard
+lbl_dashboard1=Dashboard
 lbl_toggle_navigation=Toggle navigation
 lbl_cerar_session=Close Session
-
+lbl_status=Stats
+lbl_cuenta=Account
