Corregí el idioma

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
@@ -19,7 +19,7 @@ lbl_NOMBRE = NAME
 lbl_OPCIONES_u = OPTIONS
 lbl_tipos_documento = Types Document
 lbl_add_types = Add T.D
-lbl_id_type = ID
+lbl_id_type = TD
 lbl_sigla = SIGLA
 lbl_nombre_tipo = NAME
 lbl_options = OPTIONS
@@ -53,3 +53,19 @@ lbl_load = Load files massively
 lbl_load = Load CSV
 lbl_cerrar = Close
 btn_load = Load
+lbl_usuarios_sistema=System Users
+lbl_ingrese_telefono = Enter a phone
+lbl_masculino = Male
+lbl_femenino = Female
+lbl_otro = Other
+lbl_seleccione_nuevo_estado = Select a new state
+lbl_usuarios_otro = Users
+lbl_nuevo_usuario = New User
+lbl_form_nuevo_usuario = New User Form
+lbl_ingrese_su_date = Enter your birth date
+lbl_seleccione_rol = Select a role
+lbl_contresenia = Password
+lbl_confirm_password = Confirm Password
+lbl_ingrese_telefono = Enter a phone
+lbl_seleccione_estado = Select state
+lbl_anadir_usuario = Add User
