--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil.properties
@@ -16,3 +16,4 @@ lbl_genero = Gender
 lbl_estado = State
 lbl_seleccione_estado = Select a new state
 lbl_actualizar = Update Information
+lbl_seleccione_estado=Seleccione un nuevo estado
