--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
@@ -1,21 +1,21 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafico_eventos = Chart Events
-lbl_aqui_encontraras_grafrico = Here you will find a graphical report of the events regardless of the state ordered by months
+lbl_grafico_eventos = Events Graphic
+lbl_aqui_encontraras_grafrico = Here you will find a statistical chart of the events that were performed ordered by months
 lbl_eventos_reservados = Events Reserved
-lbl_aqui_encontraras_aventos_approbnados = Here you will find the approved events
+lbl_aqui_encontraras_aventos_approbnados = Here you will find the events that were reserved
 btn_add_address = Add Request
 lbl_id_event = ID
 lbl_usuario_evento = USER
 lbl_contacto = CONTACT
-lbl_fecha_reserva = RESERVATION DATE
-lbl_direccion = ADDRESS
+lbl_fecha_reserva = DATE OF RESERVATION
+lbl_direccion = PHONE
 lbl_state = STATE
 lbl_saldo = BALANCE
-lbl_options = OPTIONS
-btn_add_address = Add Request
+lbl_options = OPCIONES
+btn_add_addressl = Add Request
 lbl_id_event = ID
-lbl_state = STATUS
+lbl_state = STATE
 btn_anadir_solicitud=Add Request
-lbl_estado=STATUS
+lbl_estado=STATE
