--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario.properties
@@ -1,43 +1,45 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafrico_inventario = Statistical Graph Inventory +
-lbl_aqui_encontraras_grafrico = Here you will find a graphical statistic in which the amount of materials that are in good condition is shown.
+lbl_grafrico_inventario =   Statistical Chart Inventory
+lbl_aqui_encontraras_grafrico = Here you will find a statistical chart showing the materials and their status ordenado por meses.
 lbl_inventario = Inventory
-lbl_aqui_encontras = Here you will find the materials that are in the warehouse.
+lbl_aqui_encontras = Here you will find the warehouse materials
 lbl_anadir_material = Add Material
 lbl_id = ID
 lbl_type_material = TYPE OF MATERIAL
-lbl_cantidad = AMOUNT
+lbl_cantidad = QUANTITY
 lbl_state = STATE
 lbl_availability = AVAILABILITY
 btn_options = OPTIONS
-lbl_actualizar_solicitud = Update Request
+lbl_actualizar_solicitud = Update Inventory
 lbl_id_material = Material ID:
-lbl_type_material = Material Type:
+lbl_type_material = Type of material:
 lbl_cantidad = Quantity:
-lbl_estado_material = Status:
+lbl_estado_material = State:
 lbl_availability = Availability:
 lbl_select = Select if available
 lbl_cerrar_modal = Close
 lbl_actualizar = Update
-lbl_clean = Delete the selected material
-lbl_esta_seguro = Are you sure of eliminating the solictiud
-lbl_esta_seguro_e = definitely from the system?
-lbl_no = No
+lbl_clean = Remove selected material
+lbl_esta_seguro = You want to delete the selected material
+lbl_esta_seguro_e = Definitely from the system?
+lbl_no = Not
 lbl_si = Yes
 lbl_actualizar_imagen_material = Update Material Image
 lbl_cerrar = Close
-lbl_carga_archivos = Load Files Massively
+lbl_carga_archivos = Massively Load Data
 lbl_cargar_csv = Load CSV
 lbl_cerrar_archivos = Close
 lbl_materiales_1 = Materials
-lbl_nuevo_material = New Material
-lbl_nuevo_form_nuevo = New Material Form
-lbl_type_material = Material Type:
+lbl_nuevo_material = New material
+lbl_nuevo_form_nuevo = Form of the New Material
+lbl_type_material = Type of material:
 lbl_cantidad_material = Quantity:
-lbl_estado = Status:
+lbl_estado = State:
 lbl_bueno = GOOD
 lbl_malo = BAD
 lbl_availability = Availability:
 lbl_add_material: Add Material
+lbl_disponibilidad=Availability
+lbl_tipo_material=Type of material
