--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/adminsitrador_perfil.properties
@@ -2,18 +2,22 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 lbl_actaulizar_perfil = Form Update Profile
-lbl_id_user = User ID
+lbl_id_user = ID USUARIO
 lbl_seleccione_documento = Select a document type
-lbl_numero_documento = Document Number
+lbl_numero_documento = Document number
 lbl_nombre = Names
 lbl_last = Surnames
 lbl_direccion = Address
-lbl_fecha_nacimiento = Date Birth
+lbl_fecha_nacimiento = Birthdate
 lbl_mail = Mail
 lbl_contrasenia = Password
-lbl_telefono = Phones
+lbl_telefono = Telephone
 lbl_genero = Gender
 lbl_estado = State
 lbl_seleccione_estado = Select a new state
-lbl_actualizar = Update Information
-lbl_seleccione_estado=Seleccione un nuevo estado
+lbl_actualizar = Update information
+lbl_seleccione_estado1=Select a new state
+lbl_correoElectronico=Email
+lbl_tipoDocumento=Types of Document
+lbl_apellido=Surnames
+lbl_contrasenia=Password
