--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
@@ -2,14 +2,14 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 lbl_grafrico_usuarios = Statistical Graph Users
-lbl_aqui_grafico_usuarios = Here you will find the report of the date it was modified ordered by the month.
+lbl_aqui_grafico_usuarios = Here you find a statistical report of the month or months that the status of the users was changed.
 lbl_usuarios_sistema = System Users
-lbl_aqui_encontraras_usuarios = Here you will find all registered users in the system.
+lbl_aqui_encontraras_usuarios = Here you will find registered users in the system
 lbl_anadir_usuario = Add User
 lbl_ID = ID
 lbl_tipo_doc = TD
 lbl_nombres = NAMES
-lbl_surname = LAST NAME
+lbl_surname = SURNAMES
 lbl_correo = MAIL
 lbl_OPTIONS = OPTIONS
 lbl_roles_usuario = User Roles
@@ -17,55 +17,58 @@ lbl_anadir_rol = Add Role
 lbl_ID = ID
 lbl_NOMBRE = NAME
 lbl_OPCIONES_u = OPTIONS
-lbl_tipos_documento = Types Document
+lbl_tipos_documento = Types of Document
 lbl_add_types = Add T.D
 lbl_id_type = TD
-lbl_sigla = SIGLA
-lbl_nombre_tipo = NAME
+lbl_sigla = INITIALS
+lbl_nombre_tipo = NAMES
 lbl_options = OPTIONS
 lbl_actualizar_usuario = Update User
 lbl_usernames = Names
-lbl_sombre_usuario = Last name
-lbl_seleccione_tipos = Select a type of document
+lbl_sombre_usuario = Surnames
+lbl_seleccione_tipos = Select a document type
 lbl_numero_documento = Document number
 lbl_direccion_usuario = Address
-lbl_ingrese_telefono = Enter a phone
+lbl_ingrese_telefono = Enter your phone
 lbl_seleccione_estado = Select a new state
 lbl_cerrar = Close
 lbl_actualizar = Update
 lbl_informacion_estado = Information of the selected user
-lbl_username = Name:
-lbl_apellido = Surname:
-lbl_type_document = Type Document:
+lbl_username = Names:
+lbl_apellido = Last Name:
+lbl_type_document = Types of Document:
 lbl_documento = Document:
-lbl_fecha_nacimiento = Date of Birth:
-lbl_mail = Mail:
-lbl_genero = Genre:
-lbl_estado = Status:
+lbl_fecha_nacimiento = Birthdate:
+lbl_mail = Mails:
+lbl_genero = Gender:
+lbl_estado = State:
 lbl_rol = Role:
 lbl_confirmar = Confirm
-lbl_eliminar_usuario_seleccionado = Delete the selected user
-lbl_estaseguro = Are you sure to delete the user
-lbl_esteaseguro_1 = definitely from the system?
+lbl_eliminar_usuario_seleccionado = Delete selected user
+lbl_estaseguro = Be sure to remove the user
+lbl_esteaseguro_1 = definitively of the system?
 lbl_si = Yes
-lbl_no = No
-lbl_load = Load files massively
+lbl_no = Not
+lbl_load = Massive data load
 lbl_load = Load CSV
 lbl_cerrar = Close
-btn_load = Load
+btn_load = Change
 lbl_usuarios_sistema=System Users
-lbl_ingrese_telefono = Enter a phone
-lbl_masculino = Male
-lbl_femenino = Female
+lbl_ingrese_telefono = Enter your phone
+lbl_masculino = Man
+lbl_femenino = Woman
 lbl_otro = Other
 lbl_seleccione_nuevo_estado = Select a new state
 lbl_usuarios_otro = Users
-lbl_nuevo_usuario = New User
+lbl_nuevo_usuario = New user
 lbl_form_nuevo_usuario = New User Form
-lbl_ingrese_su_date = Enter your birth date
+lbl_ingrese_su_date = Enter your Birth date
 lbl_seleccione_rol = Select a role
 lbl_contresenia = Password
 lbl_confirm_password = Confirm Password
-lbl_ingrese_telefono = Enter a phone
-lbl_seleccione_estado = Select state
+lbl_ingrese_telefono = Enter your phone
+lbl_seleccione_estado = Select State
 lbl_anadir_usuario = Add User
+lbl_id_tipo=Document Types
+lbl_apellidos=Surnames
+lbl_anadir_tipos=Add Document Types
