Enlace la internacionizacion a las 1:21 pm

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
@@ -13,7 +13,7 @@ lbl_fecha_reserva = DATE OF RESERVATION
 lbl_direccion = PHONE
 lbl_state = STATE
 lbl_saldo = BALANCE
-lbl_options = OPCIONES
+lbl_options = OPTIONS
 btn_add_addressl = Add Request
 lbl_id_event = ID
 lbl_state = STATE
