--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario.properties
@@ -7,10 +7,10 @@ lbl_inventario = Inventory
 lbl_aqui_encontras = Here you will find the warehouse materials
 lbl_anadir_material = Add Material
 lbl_id = ID
-lbl_type_material = TYPE OF MATERIAL
-lbl_cantidad = QUANTITY
+lbl_type_material_1 = TYPE OF MATERIAL
+lbl_cantidad_1 = QUANTITY
 lbl_state = STATE
-lbl_availability = AVAILABILITY
+lbl_availability_1 = AVAILABILITY
 btn_options = OPTIONS
 lbl_actualizar_solicitud = Update Inventory
 lbl_id_material = Material ID:
