--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
@@ -72,3 +72,5 @@ lbl_anadir_usuario = Add User
 lbl_id_tipo=Document Types
 lbl_apellidos=Surnames
 lbl_anadir_tipos=Add Document Types
+btn_tipos_documento=DOCUMENT TYPES
+btn_apellidos=LAST NAME
