Enlace la internacionizacion del menu de cliente,recreacisonista,administrador,modulo completo administrador a las 1:39 pm

--- a/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador.properties
@@ -10,3 +10,4 @@ lbl_control_events=Events Control
 lbl_eventos_reservador=Events Reserved
 lbl_eventos_realizados=Realized Events
 lbl_inventario=Inventory
+lbl_inicio=Start
