Enlace la internacionizacion del menu de cliente,recreacisonista,administrador,modulo completo administrador ademas agregue el icono del sistema en la pestaña del navegador a las 10:56am

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
@@ -3,19 +3,19 @@
 # and open the template in the editor.
 lbl_grafico_eventos = Events Graphic
 lbl_aqui_encontraras_grafrico = Here you will find a statistical chart of the events that were performed ordered by months
-lbl_eventos_reservados = Events Reserved
+lbl_eventos_reservados = Booked Events
 lbl_aqui_encontraras_aventos_approbnados = Here you will find the events that were reserved
 btn_add_address = Add Request
 lbl_id_event = ID
 lbl_usuario_evento = USER
 lbl_contacto = CONTACT
-lbl_fecha_reserva = DATE OF RESERVATION
-lbl_direccion = PHONE
-lbl_state = STATE
+lbl_fecha_reserva = DATE OF BOOKING
+lbl_direccion = ADDRESS
+lbl_state = BOOKING STATE
 lbl_saldo = BALANCE
 lbl_options = OPTIONS
 btn_add_addressl = Add Request
 lbl_id_event = ID
-lbl_state = STATE
+lbl_state = BOOKING STATE
 btn_anadir_solicitud=Add Request
-lbl_estado=STATE
+lbl_estado=BOOKING STATE
