--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_inventario.properties
@@ -1,15 +1,15 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafrico_inventario =   Statistical Chart Inventory
-lbl_aqui_encontraras_grafrico = Here you will find a statistical chart showing the materials and their status ordenado por meses.
+lbl_grafrico_inventario =   Inventory Statistical Chart
+lbl_aqui_encontraras_grafrico = Here you will find a statistical chart showing the materials and their status ordered by months.
 lbl_inventario = Inventory
 lbl_aqui_encontras = Here you will find the warehouse materials
 lbl_anadir_material = Add Material
 lbl_id = ID
 lbl_type_material_1 = TYPE OF MATERIAL
 lbl_cantidad_1 = QUANTITY
-lbl_state = STATE
+lbl_state = MATERIAL STATE
 lbl_availability_1 = AVAILABILITY
 btn_options = OPTIONS
 lbl_actualizar_solicitud = Update Inventory
@@ -23,13 +23,13 @@ lbl_cerrar_modal = Close
 lbl_actualizar = Update
 lbl_clean = Remove selected material
 lbl_esta_seguro = You want to delete the selected material
-lbl_esta_seguro_e = Definitely from the system?
+lbl_esta_seguro_e = Are you sure?
 lbl_no = Not
 lbl_si = Yes
 lbl_actualizar_imagen_material = Update Material Image
 lbl_cerrar = Close
-lbl_carga_archivos = Massively Load Data
-lbl_cargar_csv = Load CSV
+lbl_carga_archivos = Massively Upload Data
+lbl_cargar_csv = Upload CSV
 lbl_cerrar_archivos = Close
 lbl_materiales_1 = Materials
 lbl_nuevo_material = New material
