--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
@@ -1,8 +1,8 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-lbl_grafrico_usuarios = Statistical Graph Users
-lbl_aqui_grafico_usuarios = Here you find a statistical report of the month or months that the status of the users was changed.
+lbl_grafrico_usuarios =  Users Statistical Graph
+lbl_aqui_grafico_usuarios = Here you find a statistical report of the month or months  in which the status of the users was changed.
 lbl_usuarios_sistema = System Users
 lbl_aqui_encontraras_usuarios = Here you will find registered users in the system
 lbl_anadir_usuario = Add User
@@ -12,7 +12,7 @@ lbl_nombres = NAMES
 lbl_surname = SURNAMES
 lbl_correo = MAIL
 lbl_OPTIONS = OPTIONS
-lbl_roles_usuario = User Roles
+lbl_roles_usuario = User Role
 lbl_anadir_rol = Add Role
 lbl_ID = ID
 lbl_NOMBRE = NAME
@@ -20,8 +20,8 @@ lbl_OPCIONES_u = OPTIONS
 lbl_tipos_documento = Types of Document
 lbl_add_types = Add T.D
 lbl_id_type = TD
-lbl_sigla = INITIALS
-lbl_nombre_tipo = NAMES
+lbl_sigla = ACRONYM
+lbl_nombre_tipo = NAME OF TYPE OF MATERIAL
 lbl_options = OPTIONS
 lbl_actualizar_usuario = Update User
 lbl_usernames = Names
@@ -39,24 +39,24 @@ lbl_apellido = Last Name:
 lbl_type_document = Types of Document:
 lbl_documento = Document:
 lbl_fecha_nacimiento = Birthdate:
-lbl_mail = Mails:
+lbl_mail = Mail:
 lbl_genero = Gender:
 lbl_estado = State:
 lbl_rol = Role:
 lbl_confirmar = Confirm
 lbl_eliminar_usuario_seleccionado = Delete selected user
-lbl_estaseguro = Be sure to remove the user
-lbl_esteaseguro_1 = definitively of the system?
+lbl_estaseguro = Be sure to remove are the user
+lbl_esteaseguro_1 = Are your sure?
 lbl_si = Yes
 lbl_no = Not
-lbl_load = Massive data load
-lbl_load = Load CSV
+lbl_load = Massive data upload
+lbl_load = Uplooad CSV
 lbl_cerrar = Close
 btn_load = Change
 lbl_usuarios_sistema=System Users
 lbl_ingrese_telefono = Enter your phone
-lbl_masculino = Man
-lbl_femenino = Woman
+lbl_masculino = Male
+lbl_femenino = Female
 lbl_otro = Other
 lbl_seleccione_nuevo_estado = Select a new state
 lbl_usuarios_otro = Users
@@ -70,7 +70,7 @@ lbl_ingrese_telefono = Enter your phone
 lbl_seleccione_estado = Select State
 lbl_anadir_usuario = Add User
 lbl_id_tipo=Document Types
-lbl_apellidos=Surnames
+lbl_apellidos=LASTNAME
 lbl_anadir_tipos=Add Document Types
 btn_tipos_documento=DOCUMENT TYPES
-btn_apellidos=LAST NAME
+btn_apellidos=LASTNAME
