--- a/digital_events_repository/src/java/digitalevents/languaje/principal/index.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/principal/index.properties
@@ -5,12 +5,12 @@ lbl_transformers_vengadores=TRANSFORMERS AND THE VENGERS
 lbl_fiestas_infantiles=Thematic Children's Parties: Optimus Prime, BumbleBee, Captain America and IronMan can be part of your party
 lbl_un_mundo=AN INCREDIBLE WORLD!
 lbl_las_mejores=The best attractions with cutting-edge technology to make your celebrations unique
-lbl_quieres_tener_alguno=\u00bfQuieres tener alguno de nuestros Personajes en la Fiesta de Tus Hijos?
+lbl_quieres_tener_alguno=Do you want to have one of our characters at the Fiesta de You Children?
 lbl_personajes=COCO, PAW PATROL, ANGRY BIRDS, I AM LUNA, MARIO BROSS, PEPPA PIG, TOY STORY, KUNG FU PANDA, POKEMON, MONSTERS, SUPER HEROES, TOPA, PIRATES, DISNEY, AMONG OTHERS ...
 lbl_reserva_tu=Book Your Event Here
 lbl_este_anio=This year will be amazing ...
 lbl_eventos_infentiles=CHILDREN'S EVENTS
-lbl_fiestas_infentiles_recreacionistas=CHILDREN AND RECREATION PARTIES IN BOGOT\u00c1 - MUSICAL SHOWS AND RECREATORS IN ALL COLOMBIA. All in Rent Inflatable Children in Bogota.
+lbl_fiestas_infentiles_recreacionistas=CHILDREN AND RECREATION PARTIES IN BOGOT\u00c1 - MUSICAL SHOWS AND RECREATORS IN ALL COLOMBIA. All in Rent of Inflatable for Children in Bogota.
 lbl_ver_video=WATCH VIDEO
 lbl_ver_mas=SEE MORE
 lbl_eventos_empresariales=BUSINESS EVENTS
