Agregue toda la internacionalizacion del landing page enlazado, ademas realize el modeulo en donde el cliente puede generar un pdf de los eventos que fueron realizados y el administrador los eventos que fueron realizados a todos los usuarios,ademas realize el modulo de servicio al cliente en la parte del administrador

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
@@ -19,3 +19,5 @@ lbl_id_event = ID
 lbl_state = BOOKING STATE
 btn_anadir_solicitud=Add Request
 lbl_estado=BOOKING STATE
+lbl_eventos_realizados = Realized Events
+lbl_aqui_encontraras_aventos_realizados = Here you will find the events that were realized
