--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_ventas.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_ventas.properties
@@ -41,4 +41,13 @@ lbl_fecha_reserva_1=RESERVATION DATE
 LBL_DIRECCION_1=DIRECCION
 lbl_estado_1=STATE
 lbl_fecha_soliciutd=Request Date
-lbl_confirmar=Confirmar
+lbl_confirmar=Confirm
+lbl_eventos_finalizados=Finished Event
+lbl_acumulado_hoy=All money Everyday
+lbl_usuarios_nuevos=New Users
+lbl_ir_eventos=Go to Events
+lbl_ultimasveinticuatro_horas=Last 24h
+lbl_ventas_diarias=Sale daily
+lbl_actualizado_hoy=Update Now
+lbl_today_sales=increase in today sales.
+lbl_solicitudes=Request
