--- a/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/principal/menuadministrador.properties
@@ -11,3 +11,4 @@ lbl_eventos_reservador=Events Reserved
 lbl_eventos_realizados=Realized Events
 lbl_inventario=Inventory
 lbl_inicio=Start
+lbl_servicio=Client Service
