Corregi la intrenacionalizacion corregi el modelo el modulo de servicio al cliente en el administrador con el grafrico

--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_usuarios.properties
@@ -54,6 +54,8 @@ lbl_load = Uplooad CSV
 lbl_cerrar = Close
 btn_load = Change
 lbl_usuarios_sistema=System Users
+lbl_ingrese_nombres=Enter your Names...
+lbl_ingrese_apellidos=Enter your Last Names...
 lbl_ingrese_telefono = Enter your phone
 lbl_masculino = Male
 lbl_femenino = Female
