--- a/digital_events_repository/src/java/digitalevents/languaje/pagina/Conocenos.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/pagina/Conocenos.properties
@@ -4,9 +4,9 @@
 lbl_que_hacemos=What do we do?
 lbl_ofrecemos_una_aternativa=We offer an alternative, innovative and effective for the celebration of each special date, bringing to each of our events excellence and commitment, always surpassing the expectations of our customers.
 lbl_quienes_somos=About us?
-lbl_nuestra_mision=Our mission
+lbl_nuestra_mision=Mission
 lbl_ser_una_organizacion=To be a competitive, flexible and dynamic social organization dedicated to the provision of the best recreational, business and children services at a national and international level, for the welfare of children and the community in general, distinguishing us as the best alternative of fun in society , counting on the best quality of human talent.
-lbl_nuestra_vision=Our vision
+lbl_nuestra_vision=Vision
 lbl_preguntas_frecuentes=Frequent questions
 lbl_cual_seria_el_costo=WHAT WOULD BE THE COST, PRICE OR BUDGET FOR A CHILDREN'S PARTY?
 lbl_despues_de_haber=After having quoted all the previous steps you can set a real budget on the entire children's party.
