--- a/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
+++ b/digital_events_repository/src/java/digitalevents/languaje/administrador/administrador_eventos.properties
@@ -2,7 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 lbl_grafico_eventos = Events Graphic
+lbl_grafico_servicio = Client Service Graphic
 lbl_aqui_encontraras_grafrico = Here you will find a statistical chart of the events that were performed ordered by months
+lbl_aqui_encontraras_grafricoservicio = Here you will find a statistical chart of the client service that were performed
 lbl_eventos_reservados = Booked Events
 lbl_aqui_encontraras_aventos_approbnados = Here you will find the events that were reserved
 btn_add_address = Add Request
